[gd_scene load_steps=92 format=3 uid="uid://d3m1ci2db7oss"]

[ext_resource type="Script" path="res://src/entity/character/character.gd" id="1_ehf32"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/character_fsm.gd" id="2_jgwyj"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/idle.gd" id="3_wpu87"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/move.gd" id="4_41aet"]
[ext_resource type="AudioStream" uid="uid://b5g35hl20mcbk" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 1.wav" id="4_d87sa"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/die.gd" id="4_kibar"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/shoot.gd" id="5_htvxk"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/move_shoot.gd" id="5_ljr7x"]
[ext_resource type="AudioStream" uid="uid://ve4ykdk2umr7" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 7.wav" id="5_n0rev"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/melee.gd" id="5_ne6x3"]
[ext_resource type="AudioStream" uid="uid://bo073rcxici5b" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 8.wav" id="6_b6d6m"]
[ext_resource type="AudioStream" uid="uid://c1fvoyde41jlp" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 9.wav" id="7_j4qcj"]
[ext_resource type="PackedScene" uid="uid://cgkryfmd4torj" path="res://src/entity/bullet/bullet.tscn" id="8_gxqps"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/move_player.gd" id="9_r4jia"]
[ext_resource type="Script" path="res://src/entity/character/fsm/state/move_npc.gd" id="10_0x4nc"]
[ext_resource type="AudioStream" uid="uid://c5ao5gojjap1h" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Yelling Radio Voice 1.wav" id="10_3idqd"]
[ext_resource type="AudioStream" uid="uid://ciav57csq6o5c" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Yelling Radio Voice 2.wav" id="11_k1aml"]
[ext_resource type="AudioStream" uid="uid://lxrxprix1r6q" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Yelling Radio Voice 6.wav" id="12_tigal"]
[ext_resource type="AnimationLibrary" uid="uid://dm8ve6q8hsmqt" path="res://resource/character_anim.tres" id="13_c30pa"]
[ext_resource type="SpriteFrames" uid="uid://ybsqrkdfor0r" path="res://resource/character/character_0.tres" id="13_jlygo"]
[ext_resource type="AudioStream" uid="uid://1sxsos4l36tq" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Yelling Radio Screaming Voice 1.wav" id="13_khco6"]
[ext_resource type="Script" path="res://src/entity/fsm/_fsm.gd" id="13_vknas"]
[ext_resource type="Script" path="res://src/entity/character/fsm/behavior/attack.gd" id="14_a08bn"]
[ext_resource type="Script" path="res://src/entity/character/fsm/behavior/rest.gd" id="15_q5611"]
[ext_resource type="AudioStream" uid="uid://ccbgujfvxyabt" path="res://asset/snd/8881 - Sci-Fi Energy Weapon Sound Effects Pack/Sci-Fi Energy Weapon Shot 4.wav" id="17_3aye0"]
[ext_resource type="AudioStream" uid="uid://dym4f5ub4xfmi" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_01.wav" id="18_8wyc4"]
[ext_resource type="AudioStream" uid="uid://b7hidhdckmrfd" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_02.wav" id="19_bl6ma"]
[ext_resource type="AudioStream" uid="uid://cl7vyuvomkgop" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_03.wav" id="20_pglmj"]
[ext_resource type="AudioStream" uid="uid://c1s756f0dl28p" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_04.wav" id="21_7mym1"]
[ext_resource type="AudioStream" uid="uid://dhfwvebjwfwch" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_05.wav" id="22_qodsh"]
[ext_resource type="AudioStream" uid="uid://dwp22c8jyk5am" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_06.wav" id="23_xy3qv"]
[ext_resource type="AudioStream" uid="uid://dhahcfqugh85m" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_07.wav" id="24_ifeqn"]
[ext_resource type="AudioStream" uid="uid://d3m87hk2d5rrr" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_08.wav" id="25_0ii2a"]
[ext_resource type="AudioStream" uid="uid://bxij0fikjikr7" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_09.wav" id="26_b13vc"]
[ext_resource type="AudioStream" uid="uid://bh2a3e87mck6l" path="res://asset/snd/Punch & Flesh SFX/96khz24bit/S_Body_Punch_Impact_10.wav" id="27_1v5ju"]
[ext_resource type="Script" path="res://src/entity/character/fsm/behavior/move.gd" id="33_p5j20"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jxg5c"]
animation = &"character/die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_waagj"]
animation = &"character/idle_w"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_63nv2"]
animation = &"character/idle_e"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ujojp"]
animation = &"character/idle_ne"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_etsrn"]
animation = &"character/idle_nw"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8g122"]
blend_point_0/node = SubResource("AnimationNodeAnimation_waagj")
blend_point_0/pos = Vector2(-0.2, -0.3)
blend_point_1/node = SubResource("AnimationNodeAnimation_63nv2")
blend_point_1/pos = Vector2(0.2, -0.3)
blend_point_2/node = SubResource("AnimationNodeAnimation_ujojp")
blend_point_2/pos = Vector2(0.2, 0.3)
blend_point_3/node = SubResource("AnimationNodeAnimation_etsrn")
blend_point_3/pos = Vector2(-0.2, 0.3)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hjgp5"]
animation = &"character/melee_nw"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3sthb"]
animation = &"character/melee_ne"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iwfii"]
animation = &"character/melee_sw"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x8ay8"]
animation = &"character/melee_se"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_41cjk"]
blend_point_0/node = SubResource("AnimationNodeAnimation_hjgp5")
blend_point_0/pos = Vector2(-0.2, 0.3)
blend_point_1/node = SubResource("AnimationNodeAnimation_3sthb")
blend_point_1/pos = Vector2(0.2, 0.3)
blend_point_2/node = SubResource("AnimationNodeAnimation_iwfii")
blend_point_2/pos = Vector2(-0.2, -0.3)
blend_point_3/node = SubResource("AnimationNodeAnimation_x8ay8")
blend_point_3/pos = Vector2(0.2, -0.3)
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j7w4y"]
animation = &"character/move_shoot_n"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2cy5e"]
animation = &"character/move_shoot_s"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0oha1"]
animation = &"character/move_shoot_e"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ut3we"]
animation = &"character/move_shoot_w"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_xqy64"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j7w4y")
blend_point_0/pos = Vector2(0, 0.3)
blend_point_1/node = SubResource("AnimationNodeAnimation_2cy5e")
blend_point_1/pos = Vector2(0, -0.3)
blend_point_2/node = SubResource("AnimationNodeAnimation_0oha1")
blend_point_2/pos = Vector2(0.3, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ut3we")
blend_point_3/pos = Vector2(-0.3, 0)
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rkf85"]
animation = &"character/move_nw"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tuxla"]
animation = &"character/move_ne"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6tbc8"]
animation = &"character/move_e"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_md44c"]
animation = &"character/move_w"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1wf4q"]
blend_point_0/node = SubResource("AnimationNodeAnimation_rkf85")
blend_point_0/pos = Vector2(-0.2, 0.3)
blend_point_1/node = SubResource("AnimationNodeAnimation_tuxla")
blend_point_1/pos = Vector2(0.2, 0.3)
blend_point_2/node = SubResource("AnimationNodeAnimation_6tbc8")
blend_point_2/pos = Vector2(0.2, -0.3)
blend_point_3/node = SubResource("AnimationNodeAnimation_md44c")
blend_point_3/pos = Vector2(-0.2, -0.3)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_medxd"]
animation = &"character/shoot_n"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ij1l"]
animation = &"character/shoot_s"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v1bur"]
animation = &"character/shoot_e"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1q67u"]
animation = &"character/shoot_w"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_y538s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_medxd")
blend_point_0/pos = Vector2(0, 0.3)
blend_point_1/node = SubResource("AnimationNodeAnimation_3ij1l")
blend_point_1/pos = Vector2(0, -0.3)
blend_point_2/node = SubResource("AnimationNodeAnimation_v1bur")
blend_point_2/pos = Vector2(0.3, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_1q67u")
blend_point_3/pos = Vector2(-0.3, 0)
sync = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_boeuo"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r7hii"]
advance_mode = 2
advance_condition = &"shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qv3q1"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tre8a"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4t47u"]
advance_mode = 2
advance_condition = &"move-shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tgvsq"]
advance_mode = 2
advance_condition = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ua3n7"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mvbcd"]
advance_mode = 2
advance_condition = &"move-shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m2ou7"]
switch_mode = 2
advance_mode = 2
advance_condition = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_smuoq"]
advance_mode = 2
advance_condition = &"shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0f138"]
switch_mode = 2
advance_mode = 2
advance_condition = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_egy04"]
switch_mode = 2
advance_mode = 2
advance_condition = &"shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mr3xr"]
switch_mode = 2
advance_mode = 2
advance_condition = &"move-shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cimtu"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_13wvu"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gnjgm"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_at3ep"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l2erx"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7va2r"]
advance_mode = 2
advance_condition = &"melee"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7nsd6"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_08oec"]
switch_mode = 2
advance_mode = 2
advance_condition = &"move-shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ad35f"]
advance_mode = 2
advance_condition = &"melee"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_13gp4"]
switch_mode = 2
advance_mode = 2
advance_condition = &"shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wk6b2"]
advance_mode = 2
advance_condition = &"melee"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o27ik"]
switch_mode = 2
advance_mode = 2
advance_condition = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xx8k4"]
advance_mode = 2
advance_condition = &"melee"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ervpj"]
states/Start/position = Vector2(205, 80)
states/die/node = SubResource("AnimationNodeAnimation_jxg5c")
states/die/position = Vector2(545, 363)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_8g122")
states/idle/position = Vector2(464, 245)
states/melee/node = SubResource("AnimationNodeBlendSpace2D_41cjk")
states/melee/position = Vector2(321, 363)
states/move/node = SubResource("AnimationNodeBlendSpace2D_1wf4q")
states/move/position = Vector2(650, 100)
states/move-shoot/node = SubResource("AnimationNodeBlendSpace2D_xqy64")
states/move-shoot/position = Vector2(464, 100)
states/shoot/node = SubResource("AnimationNodeBlendSpace2D_y538s")
states/shoot/position = Vector2(650, 245)
transitions = ["idle", "die", SubResource("AnimationNodeStateMachineTransition_boeuo"), "idle", "shoot", SubResource("AnimationNodeStateMachineTransition_r7hii"), "shoot", "idle", SubResource("AnimationNodeStateMachineTransition_qv3q1"), "move-shoot", "idle", SubResource("AnimationNodeStateMachineTransition_tre8a"), "idle", "move-shoot", SubResource("AnimationNodeStateMachineTransition_4t47u"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_tgvsq"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_ua3n7"), "move", "move-shoot", SubResource("AnimationNodeStateMachineTransition_mvbcd"), "move-shoot", "move", SubResource("AnimationNodeStateMachineTransition_m2ou7"), "move", "shoot", SubResource("AnimationNodeStateMachineTransition_smuoq"), "shoot", "move", SubResource("AnimationNodeStateMachineTransition_0f138"), "move-shoot", "shoot", SubResource("AnimationNodeStateMachineTransition_egy04"), "shoot", "move-shoot", SubResource("AnimationNodeStateMachineTransition_mr3xr"), "move-shoot", "die", SubResource("AnimationNodeStateMachineTransition_cimtu"), "shoot", "die", SubResource("AnimationNodeStateMachineTransition_13wvu"), "move", "die", SubResource("AnimationNodeStateMachineTransition_gnjgm"), "melee", "die", SubResource("AnimationNodeStateMachineTransition_at3ep"), "melee", "idle", SubResource("AnimationNodeStateMachineTransition_l2erx"), "idle", "melee", SubResource("AnimationNodeStateMachineTransition_7va2r"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_7nsd6"), "melee", "move-shoot", SubResource("AnimationNodeStateMachineTransition_08oec"), "move-shoot", "melee", SubResource("AnimationNodeStateMachineTransition_ad35f"), "melee", "shoot", SubResource("AnimationNodeStateMachineTransition_13gp4"), "shoot", "melee", SubResource("AnimationNodeStateMachineTransition_wk6b2"), "melee", "move", SubResource("AnimationNodeStateMachineTransition_o27ik"), "move", "melee", SubResource("AnimationNodeStateMachineTransition_xx8k4")]
graph_offset = Vector2(59, 34)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fro8x"]
margin = 1.0
height = 1.06

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8f501"]
height = 1.5
radius = 4.0

[node name="character" type="CharacterBody3D" node_paths=PackedStringArray("nav_agent") groups=["character"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_ehf32")
nav_agent = NodePath("navigationAgent3DObjective")

[node name="fsm" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("2_jgwyj")
character = NodePath("..")

[node name="idle" type="Node" parent="fsm"]
script = ExtResource("3_wpu87")
quip_min_time = 5.0
quip_max_time = 30.0
quips = Array[AudioStream]([ExtResource("4_d87sa"), ExtResource("5_n0rev"), ExtResource("6_b6d6m"), ExtResource("7_j4qcj")])
quip_play_chance = 0.2

[node name="quip_timer" type="Timer" parent="fsm/idle"]
one_shot = true

[node name="move" type="Node" parent="fsm"]
script = ExtResource("4_41aet")
speed = 8.0
BOB_FREQ = 2.0
quips = Array[AudioStream]([ExtResource("4_d87sa"), ExtResource("5_n0rev"), ExtResource("6_b6d6m"), ExtResource("7_j4qcj")])
quip_play_chance = 0.2

[node name="player" type="Node" parent="fsm/move"]
script = ExtResource("9_r4jia")

[node name="npc" type="Node" parent="fsm/move" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("10_0x4nc")
nav_agent = NodePath("../../../navigationAgent3D")

[node name="move-shoot" type="Node" parent="fsm"]
script = ExtResource("5_ljr7x")
bullet_scene = ExtResource("8_gxqps")
quips = Array[AudioStream]([ExtResource("10_3idqd"), ExtResource("11_k1aml"), ExtResource("12_tigal")])
quip_play_chance = 0.125

[node name="player" type="Node" parent="fsm/move-shoot"]
script = ExtResource("9_r4jia")

[node name="npc" type="Node" parent="fsm/move-shoot" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("10_0x4nc")
nav_agent = NodePath("../../../navigationAgent3D")

[node name="shoot" type="Node" parent="fsm"]
script = ExtResource("5_htvxk")
bullet_scene = ExtResource("8_gxqps")
quips = Array[AudioStream]([ExtResource("10_3idqd"), ExtResource("11_k1aml"), ExtResource("12_tigal")])
quip_play_chance = 0.125

[node name="melee" type="Node" parent="fsm" node_paths=PackedStringArray("snd")]
script = ExtResource("5_ne6x3")
melee_snd = Array[AudioStream]([ExtResource("18_8wyc4"), ExtResource("19_bl6ma"), ExtResource("20_pglmj"), ExtResource("21_7mym1"), ExtResource("22_qodsh"), ExtResource("23_xy3qv"), ExtResource("24_ifeqn"), ExtResource("25_0ii2a"), ExtResource("26_b13vc"), ExtResource("27_1v5ju")])
snd = NodePath("../../snd_melee")
quips = Array[AudioStream]([ExtResource("10_3idqd"), ExtResource("11_k1aml"), ExtResource("12_tigal")])
quip_play_chance = 0.125

[node name="die" type="Node" parent="fsm"]
script = ExtResource("4_kibar")
quips = Array[AudioStream]([ExtResource("13_khco6")])

[node name="fsm_behavior" type="Node" parent="."]
script = ExtResource("13_vknas")

[node name="attack" type="Node" parent="fsm_behavior" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("14_a08bn")
nav_agent = NodePath("../../navigationAgent3D")

[node name="melee_cooldown" type="Timer" parent="fsm_behavior/attack"]
wait_time = 1.5
one_shot = true

[node name="shoot_cooldown" type="Timer" parent="fsm_behavior/attack"]
wait_time = 1.5
one_shot = true

[node name="rest" type="Node" parent="fsm_behavior"]
script = ExtResource("15_q5611")

[node name="move" type="Node" parent="fsm_behavior" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("33_p5j20")
nav_agent = NodePath("../../navigationAgent3D")

[node name="animationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"character": ExtResource("13_c30pa")
}

[node name="animationTree" type="AnimationTree" parent="."]
libraries = {
"character": ExtResource("13_c30pa")
}
tree_root = SubResource("AnimationNodeStateMachine_ervpj")
anim_player = NodePath("../animationPlayer")
parameters/conditions/die = false
parameters/conditions/idle = false
parameters/conditions/melee = false
parameters/conditions/move = false
parameters/conditions/move-shoot = false
parameters/conditions/shoot = false
parameters/idle/blend_position = Vector2(0, 0)
parameters/melee/blend_position = Vector2(0, 0)
parameters/move/blend_position = Vector2(0, 0)
parameters/move-shoot/blend_position = Vector2(0, 0)
parameters/shoot/blend_position = Vector2(0, 0)

[node name="navigationAgent3D" type="NavigationAgent3D" parent="."]
path_max_distance = 3.01
avoidance_enabled = true
radius = 0.55
neighbor_distance = 12.0
time_horizon_obstacles = 1.0

[node name="navigationAgent3DObjective" type="NavigationAgent3D" parent="."]
navigation_layers = 2

[node name="snd" type="AudioStreamPlayer3D" parent="."]
max_distance = 30.0
bus = &"sfx"

[node name="snd_shoot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("17_3aye0")
max_distance = 30.0
bus = &"sfx"

[node name="snd_melee" type="AudioStreamPlayer3D" parent="."]
max_distance = 30.0
bus = &"sfx"

[node name="body" type="CollisionShape3D" parent="."]
transform = Transform3D(0.999999, -0.00117205, 0.00101281, 0.0011749, 0.999995, -0.00283243, -0.00100951, 0.00283361, 0.999995, 0, 0.53, 0)
shape = SubResource("CapsuleShape3D_fro8x")

[node name="img" type="AnimatedSprite3D" parent="."]
offset = Vector2(0, 3)
pixel_size = 0.125
billboard = 1
shaded = true
texture_filter = 0
sprite_frames = ExtResource("13_jlygo")
animation = &"idle_w"

[node name="pivot" type="Node3D" parent="img"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.46404, 0)

[node name="springArm3D" type="SpringArm3D" parent="img/pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
spring_length = 1.75
margin = 0.2

[node name="camera3D" type="Camera3D" parent="img/pivot/springArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 1.75)

[node name="hit_cast_melee" type="RayCast3D" parent="img"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.3, -0.5)
target_position = Vector3(0, 0.8, 0)
collision_mask = 2

[node name="hit_cast_shoot" type="RayCast3D" parent="img"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.3, -0.5)
target_position = Vector3(0, 24, 0)
collision_mask = 2

[node name="spotLight3D" type="SpotLight3D" parent="img"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5)
visible = false
light_color = Color(0.568627, 0.745098, 0.87451, 1)
light_energy = 2.5
shadow_enabled = true
spot_angle = 60.0

[node name="sight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="sight"]
shape = SubResource("CylinderShape3D_8f501")

[node name="visibility" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
aabb = AABB(-6, -1, -6, 12, 2, 12)

[connection signal="timeout" from="fsm/idle/quip_timer" to="fsm/idle" method="_on_quip_timer_timeout"]
[connection signal="animation_finished" from="animationTree" to="fsm/move-shoot" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="animationTree" to="fsm/shoot" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="animationTree" to="fsm/die" method="_on_animation_tree_animation_finished"]
[connection signal="velocity_computed" from="navigationAgent3D" to="." method="_on_nav_velocity_computed"]
[connection signal="area_entered" from="sight" to="." method="_on_sight_area_entered"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="screen_entered" from="visibility" to="." method="_on_visibility_screen_entered"]
[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_screen_exited"]
